--- a/www/src/sass/ids.scss
+++ b/www/src/sass/ids.scss
@@ -1,2 +1,7 @@
 @import 'ids/errors';
+@import 'ids/experiences';
+@import 'ids/header';
+@import 'ids/menu';
+@import 'ids/offline';
+@import 'ids/skills';
 @import 'ids/testing';
