--- a/www/src/sass/ids/errors.scss
+++ b/www/src/sass/ids/errors.scss
@@ -1,20 +1,25 @@
 #errors {
 	bottom: 0;
 	left: 0;
+	padding: 5px;
 	position: absolute;
 	right: 0;
-	z-index: 999;
+	z-index: $z-errors;
 
-	.item {
-		background-color: #ec5858;
+	.error {
+		background-color: $cError;
 		border-radius: 10px;
 		box-shadow: 5px 5px 8px #868686;
-		color: #fff;
+		color: $cWhite;
 		margin: 10px;
 		padding: 10px;
 
-		p {
-			font-weight: bold;
+		.text {
+			overflow: auto;
+
+			p {
+				font-weight: bold;
+			}
 		}
 	}
 }
