--- a/www/src/sass/ids.scss
+++ b/www/src/sass/ids.scss
@@ -1,6 +1,7 @@
 @import 'ids/errors';
 @import 'ids/experiences';
 @import 'ids/header';
+@import 'ids/intro';
 @import 'ids/menu';
 @import 'ids/offline';
 @import 'ids/skills';
