--- a/www/src/sass/ids.scss
+++ b/www/src/sass/ids.scss
@@ -5,6 +5,7 @@
 @import 'ids/menu';
 @import 'ids/offline';
 @import 'ids/skills';
+@import 'ids/static_devmedika';
 @import 'ids/static_this';
 @import 'ids/static_servicesvp';
 @import 'ids/testing';
